--- a/econotag/Makefile
+++ b/econotag/Makefile
@@ -27,7 +27,7 @@ clear:
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag erase
 
 upload:
-	../blaster/blaster 19 < device_redbee-econotag.bin > device_e_redbee-econotag.bin 2> device_e_redbee-econotag.txt
-	../libmc1322x/tools/mc1322x-load.pl -f ../libmc1322x/tests/flasher_redbee-econotag.bin -s device_e_redbee-econotag.bin -t /dev/ttyUSB1
+	../blaster/blaster 19 < $(CONTIKI_PROJECT)_redbee-econotag.bin > $(CONTIKI_PROJECT)_e_redbee-econotag.bin 2> $(CONTIKI_PROJECT)_e_redbee-econotag.txt
+	../libmc1322x/tools/mc1322x-load.pl -f ../libmc1322x/tests/flasher_redbee-econotag.bin -s $(CONTIKI_PROJECT)_e_redbee-econotag.bin -t /dev/ttyUSB1
 
 include $(CONTIKI)/Makefile.include
