--- a/econotag/Makefile
+++ b/econotag/Makefile
@@ -30,4 +30,7 @@ upload:
 	../blaster/blaster 19 < $(CONTIKI_PROJECT)_redbee-econotag.bin > $(CONTIKI_PROJECT)_e_redbee-econotag.bin 2> $(CONTIKI_PROJECT)_e_redbee-econotag.txt
 	../libmc1322x/tools/mc1322x-load.pl -f ../libmc1322x/tests/flasher_redbee-econotag.bin -s $(CONTIKI_PROJECT)_e_redbee-econotag.bin -t /dev/ttyUSB1
 
+listen:
+	while true; do cat /dev/ttyUSB1; done
+
 include $(CONTIKI)/Makefile.include
