--- a/econotag/Makefile
+++ b/econotag/Makefile
@@ -27,8 +27,16 @@ clear:
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag erase
 
 upload:
-	../blaster/blaster 19 < $(CONTIKI_PROJECT)_redbee-econotag.bin > $(CONTIKI_PROJECT)_e_redbee-econotag.bin 2> $(CONTIKI_PROJECT)_e_redbee-econotag.txt
-	../libmc1322x/tools/mc1322x-load -f ../libmc1322x/tests/flasher_redbee-econotag.bin -s $(CONTIKI_PROJECT)_e_redbee-econotag.bin -t /dev/ttyUSB1 -c 'sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset' -e
+	../blaster/blaster 19 < $(CONTIKI_PROJECT)_redbee-econotag.bin > \
+	$(CONTIKI_PROJECT)_e_redbee-econotag.bin 2> \
+	$(CONTIKI_PROJECT)_e_redbee-econotag.txt \
+	
+	../libmc1322x/tools/mc1322x-load \
+	-f ../libmc1322x/tests/flasher_redbee-econotag.bin \
+	-s $(CONTIKI_PROJECT)_e_redbee-econotag.bin \
+	-c 'sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset' \
+	-t /dev/ttyUSB1 -e -v \
+	
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset
 
 listen:
