--- a/contiki/apps/er-coap-13/Makefile.er-coap-13
+++ b/contiki/apps/er-coap-13/Makefile.er-coap-13
@@ -1,1 +1,1 @@
-er-coap-13_src = er-coap-13.c er-coap-13-engine.c er-coap-13-dtls.c er-coap-13-dtls-resource.c er-coap-13-dtls-data.c er-coap-13-dtls-ccm.c er-coap-13-dtls-random.c er-coap-13-transactions.c er-coap-13-observing.c er-coap-13-separate.c
+er-coap-13_src = er-coap-13.c er-coap-13-engine.c er-coap-13-dtls.c er-coap-13-dtls-resource.c er-coap-13-dtls-data.c er-coap-13-dtls-ccm.c er-coap-13-dtls-random.c er-coap-13-transactions.c er-coap-13-observing.c er-coap-13-separate.c er-coap-13-dtls-ecc.c
