--- a/client/libcoap-4.0.1/Makefile.in
+++ b/client/libcoap-4.0.1/Makefile.in
@@ -20,11 +20,13 @@ package = @PACKAGE_TARNAME@-@PACKAGE_VERSION@
 
 # files and flags
 SOURCES:= pdu.c net.c debug.c encode.c uri.c coap_list.c resource.c hashkey.c \
-	 str.c option.c async.c subscribe.c block.c coap_dtls.c coap_ccm.c coap_random.c
+	str.c option.c async.c subscribe.c block.c random.c coap_dtls.c coap_ccm.c \
+	coap_dtls_handshake.c coap_dtls_clientHello.c
 OBJECTS:= $(patsubst %.c, %.o, $(SOURCES))
 HEADERS:=coap.h config.h debug.h pdu.h net.h encode.h uri.h coap_list.h mem.h \
 	str.h option.h bits.h uthash.h utlist.h resource.h hashkey.h async.h \
-	subscribe.h block.h address.h prng.h coap_time.h coap_dtls.h coap_ccm.h coap_random.h
+	subscribe.h block.h address.h prng.h random.h coap_time.h coap_dtls.h coap_ccm.h \
+	coap_dtls_handshake.h coap_dtls_clientHello.h
 CFLAGS:=-Wall -Wextra -std=c99 -pedantic @CFLAGS@
 CPPFLAGS:=@CPPFLAGS@
 DISTDIR=$(top_builddir)/$(package)
