DTLS als extra app funktioniert nun. Ist im econotag/Makefile aktiviert.

--- a/econotag/Makefile
+++ b/econotag/Makefile
@@ -6,10 +6,10 @@ all: $(CONTIKI_PROJECT)
 
 WITH_UIP6=1
 UIP_CONF_IPV6=1
-# WITH_DTLS=1
+WITH_DTLS=1
 WITH_COAP=13
 
-# CFLAGS += -DWITH_DTLS=1
+CFLAGS += -DWITH_DTLS=1
 CFLAGS += -DWITH_COAP=13
 CFLAGS += -DREST=coap_rest_implementation
 CFLAGS += -DUIP_CONF_TCP=0
@@ -19,6 +19,7 @@ CFLAGS += -I../../contiki/apps/er-coap-13
 LDFLAGS += "-Wl,-gc-sections"
 
 # zusätzliche Bibliotheken aus $(CONTIKI)/apps
+APPS += er-dtls-13
 APPS += er-coap-13
 APPS += erbium
 APPS += flash-store
