--- a/border-router/Makefile
+++ b/border-router/Makefile
@@ -58,6 +58,9 @@ upload:
 listen:
 	while true; do cat /dev/ttyUSB1; done
 
+border:
+	sudo ../contiki/tools/tunslip6 -s /dev/ttyUSB3 aaaa::1/64
+
 include $(CONTIKI)/Makefile.include
 
 $(CONTIKI)/tools/tunslip6:	$(CONTIKI)/tools/tunslip6.c
