--- a/econotag/Makefile
+++ b/econotag/Makefile
@@ -30,7 +30,7 @@ APPS += time
 PROJECT_SOURCEFILES = attributes.c
 
 clear:
-	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag erase
+	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 erase
 
 upload:
 	../blaster/blaster 19 < $(CONTIKI_PROJECT)_redbee-econotag.bin > \
