--- a/econotag/Makefile
+++ b/econotag/Makefile
@@ -33,6 +33,9 @@ copy:
 	 cp $(CONTIKI_PROJECT)_redbee-econotag.bin ../client/$(CONTIKI_PROJECT)_redbee-econotag.bin
 
 clear:
+	-rm $(CONTIKI_PROJECT)_e_redbee-econotag.bin
+	-rm $(CONTIKI_PROJECT)_e_redbee-econotag.txt
+	-rm qr-code.pbm
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 erase
 
 upload:
