--- a/client/Makefile
+++ b/client/Makefile
@@ -1,24 +1,12 @@
-#
-# MAKEFILE for client
-#
-
-# Value of RAND_GEN determines the strength of the random number generator
-# 0 - /dev/zero (do not use for everything else than testing)
-# 1 - /dev/urandom (default)
-# 2 - /dev/random (very secure but blocks if not enough entropy)
-RAND_GEN=1
-
 CC = gcc
 
-CFLAGS=-Wall -pthread -O2 -g
-LDFLAGS= -lssl -lcrypto -luuid
-DEFINES= -DRND_DEV=${RAND_GEN}
+CFLAGS = -Wall -pthread -O2 -g
+LDFLAGS = -lssl -lcrypto -luuid
+DEFINES =
 
-FLAGS=${CFLAGS} ${LDFLAGS} ${DEFINES}
+HEADERS = ip_tools.h ip_list.h border_com.h node_com.h coap_client.h libcoap-4.0.1/coap_client.h dtls/dtls.h
 
 all: client
-
-HEADERS = ip_tools.h ip_list.h border_com.h node_com.h libcoap-4.0.1/coap_client.h
 
 %.o: %.c $(HEADERS)
 	$(CC) -c $(CFLAGS) -o $@ $< ${DEFINES}
@@ -26,11 +14,15 @@ HEADERS = ip_tools.h ip_list.h border_com.h node_com.h libcoap-4.0.1/coap_client
 libcoap-4.0.1/libcoap.a:
 	make -C libcoap-4.0.1
 
-client: client.o ip_tools.o ip_list.o border_com.o node_com.o coap_client.o libcoap-4.0.1/libcoap.a
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS) ${DEFINES}
+dtls/dtls.a:
+	make -C dtls
+
+client: client.o ip_tools.o ip_list.o border_com.o node_com.o coap_client.o libcoap-4.0.1/libcoap.a dtls/dtls.a
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 clean:
 	-rm *.o client
-	make -C libcoap-4.0.1 clean
+	-make -C libcoap-4.0.1 clean
+	-make -C dtls clean
 
 .PHONY: all clean
