--- a/border-router/Makefile
+++ b/border-router/Makefile
@@ -40,21 +40,14 @@ ifeq ($(PREFIX),)
 endif
 
 clear:
-	-rm $(CONTIKI_PROJECT)_e_redbee-econotag.bin
-	-rm $(CONTIKI_PROJECT)_e_redbee-econotag.txt
-	-rm qr-code.pbm
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 erase
 
 upload:
-	../blaster/blaster 22 < $(CONTIKI_PROJECT)_redbee-econotag.bin > \
-	$(CONTIKI_PROJECT)_e_redbee-econotag.bin 2> \
-	$(CONTIKI_PROJECT)_e_redbee-econotag.txt \
-	
 	../libmc1322x/tools/mc1322x-load \
 	-f ../libmc1322x/tests/flasher_redbee-econotag.bin \
-	-s $(CONTIKI_PROJECT)_e_redbee-econotag.bin \
+	-s $(CONTIKI_PROJECT)_redbee-econotag.bin \
 	-c 'sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset' \
-	-t /dev/ttyUSB1 -e -v \
+	-t /dev/ttyUSB1 -e \
 	
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset
 
