--- a/server/Makefile
+++ b/server/Makefile
@@ -49,7 +49,7 @@ upload:
 	-f ../libmc1322x/tests/flasher_redbee-econotag.bin \
 	-s $(CONTIKI_PROJECT)_e_redbee-econotag.bin \
 	-c 'sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset' \
-	-t /dev/ttyUSB1 -e \
+	-t /dev/ttyUSB1 -l -e \
 	
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset
 
