--- a/sniffer/Makefile
+++ b/sniffer/Makefile
@@ -3,19 +3,12 @@ CONTIKI_PROJECT = ../libmc1322x/tests/rftest-rx
 all: upload
 
 clear:
-	-rm rftest-rx_e_redbee-econotag.bin
-	-rm rftest-rx_e_redbee-econotag.txt
-	-rm qr-code.pbm
 	sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag erase
 
 upload:
-	../blaster/blaster 28 < $(CONTIKI_PROJECT)_redbee-econotag.bin > \
-	rftest-rx_e_redbee-econotag.bin 2> \
-	rftest-rx_e_redbee-econotag.txt \
-	
 	../libmc1322x/tools/mc1322x-load \
 	-f ../libmc1322x/tests/flasher_redbee-econotag.bin \
-	-s rftest-rx_e_redbee-econotag.bin \
+	-s rftest-rx_redbee-econotag.bin 0x1e000,0xB160B162,0x2800B160 \
 	-c 'sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset' \
 	-t /dev/ttyUSB1 -e \
 	
