--- a/sniffer/Makefile
+++ b/sniffer/Makefile
@@ -8,7 +8,7 @@ clear:
 upload:
 	../libmc1322x/tools/mc1322x-load \
 	-f ../libmc1322x/tests/flasher_redbee-econotag.bin \
-	-s rftest-rx_redbee-econotag.bin 0x1e000,0xB160B162,0x2800B160 \
+	-s $(CONTIKI_PROJECT)_redbee-econotag.bin 0x1e000,0xB160B162,0x2800B160 \
 	-c 'sudo ../libmc1322x/tools/ftditools/bbmc -l redbee-econotag -i 0 reset' \
 	-t /dev/ttyUSB1 -e \
 	
